se ajusta cambio de passwd

--- a/Windows_vista/usuarios/Frm_actualizar_mi_perfil.resx
+++ b/Windows_vista/usuarios/Frm_actualizar_mi_perfil.resx
@@ -4445,4 +4445,10 @@
   <metadata name="errorTipoUsuario.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>1050, 17</value>
   </metadata>
+  <metadata name="errorPasswd.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>1180, 17</value>
+  </metadata>
+  <metadata name="errorConfirmarPasswd.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 56</value>
+  </metadata>
 </root>
